# ArmRobotic6DOF

./: .gitignore  README.md
src/meu_braco_control/: CMakeLists.txt  package.xml
src/meu_braco_control/config/: controllers.yaml
src/meu_braco_control/firmware/meu_braco_firmware/: debug_servos.ino  meu_braco_firmware.ino
src/meu_braco_control/launch/: controller.launch.py  real_robot.launch.py
src/meu_braco_description/: CMakeLists.txt  package.xml
src/meu_braco_description/launch/: display.launch.py  gazebo.launch.py
src/meu_braco_description/rviz/: braco.rviz
src/meu_braco_description/urdf/: model.xacro  model_gazebo.xacro  model_ros2_control.xacro  real_robot.ros2_control.xacro
src/meu_braco_hardware/: CMakeLists.txt  package.xml  ros2_control.xml
src/meu_braco_hardware/include/meu_braco_hardware/: meu_braco_system_interface.hpp
src/meu_braco_hardware/src/: meu_braco_system_interface.cpp
src/meu_braco_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/meu_braco_moveit_config/config/: arm_6dof.ros2_control.xacro  arm_6dof.srdf  arm_6dof.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/meu_braco_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  run_moveit.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/meu_braco_scripts/: package.xml  setup.cfg  setup.py
src/meu_braco_scripts/meu_braco_scripts/: pick_and_place_task.py  point_to_detected_object.py
